loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:7: error: ';' expected but '{' found.
  }while (crossing() == false) {
                               ^